--- a/WebPCConfigTool/Site.Master
+++ b/WebPCConfigTool/Site.Master
@@ -51,8 +51,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/Pages/PCConfig.aspx">Configuration</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Pages/PCConfig.aspx">Set Configuration</a></li>
+                        <li><a runat="server" href="~/Pages/Configurations.aspx">Configurations</a></li>
                     </ul>
                 </div>
             </div>
